# shennong-platform

./: .gitignore  LICENSE  README.md
.mimocode/plans/: 1783907571719-playful-meadow.md
3d-print/: README.md
3d-print/potato-aeroponic/: README.md
3d-print/vegetable-aeroponic/: README.md
ai-models/: README.md
ai-models/mushroom-culture/: README.md
ai-models/seed-planter/: README.md
app/: README.md
auxiliary/: README.md
auxiliary/seed-planter/: README.md  platformio.ini
auxiliary/seed-planter/3d-print/: README.md
auxiliary/seed-planter/hardware/: README.md
auxiliary/seed-planter/src/: main.cpp
bio/: README.md
bio/Kingdom_Bacteria/: README.md
bio/Kingdom_Bacteria/Phylum_Cyanobacteria/: README.md
bio/Kingdom_Fungi/: README.md
bio/Kingdom_Fungi/Phylum_Basidiomycota/: README.md
bio/Kingdom_Plantae/: README.md
bio/Kingdom_Plantae/Phylum_Magnoliophyta/: README.md
cloud/: README.md
cultivators/algae-farm/chlorella-algae/: platformio.ini
cultivators/algae-farm/spiral/: platformio.ini
cultivators/algae-planter/: README.md  platformio.ini
cultivators/algae-planter/3d-print/: README.md
cultivators/fungi-planter/: README.md  platformio.ini
cultivators/leaf-planter/: README.md  platformio.ini
cultivators/tuber-planter/: README.md  platformio.ini
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  QUICK_REFERENCE.md  README.md  REFACTOR_PLAN.md  TAXONOMY.md  TUYA_T5_STANDARDS.md
farm/plant/stem/: platformio.ini
firmware/: CMakeLists.txt  DEPLOYMENT.md  README.md
firmware/arduino/: README.md
firmware/arduino/Kingdom_Bacteria/Phylum_Cyanobacteria/spirulina-culture/: README.md
firmware/arduino/Kingdom_Fungi/Phylum_Basidiomycota/mushroom-culture/: platformio.ini
firmware/arduino/Kingdom_Fungi/Phylum_Basidiomycota/mushroom-culture/src/: main.cpp
firmware/arduino/Kingdom_Plantae/Phylum_Magnoliophyta/potato-planting/: README.md
firmware/arduino/Kingdom_Plantae/Phylum_Magnoliophyta/seed-planting/: platformio.ini
firmware/arduino/Kingdom_Plantae/Phylum_Magnoliophyta/seed-planting/src/: main.cpp
firmware/arduino/Kingdom_Plantae/Phylum_Magnoliophyta/vegetable-planting/: README.md
firmware/duckyclaw/: CMakeLists.txt  README.md
firmware/duckyclaw/config/: duckyclaw_config.json
firmware/edge-inference/: README.md
firmware/local-control/: CMakeLists.txt  README.md
firmware/meshtastic-client/: CMakeLists.txt  README.md
firmware/meshtastic-client/config/: meshtastic_config.json
firmware/ota/: CMakeLists.txt  README.md
firmware/ota/config/: ota_config.json
firmware/storage/: CMakeLists.txt  README.md
firmware/storage/config/: storage_config.json
firmware/t5-gateway/: README.md
gateway/: SDK.md
gateway-device/wbr3/: README.md
gateway/edge-inference/: CMakeLists.txt  README.md
gateway/edge-inference/tuya-zs3l/: README.md
gateway/t5/: README.md
gateway/tuya-t5/: CMakeLists.txt  README.md
gateway/wbr3/: README.md
hardware/: README.md
hardware/potato-aeroponic/: README.md
shared/: README.md  config.h  protocols.h  species_match.h  sub_device_template.c
shared/common/: device.c  device.h
shared/hal/: adc.c  delay.c  delay.h  gpio.c  library.json  library.properties  uart.c
(+150 files in other folders)
